--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/17_cucumberraita/17_36.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/17_cucumberraita/17_36.yaml
@@ -7,6 +7,8 @@ step_annotations:
   errors:
   - description: added approximate quantity, did not measure
     tag: Measurement Error
+  - description: Step performed before whisking curd in the bowl
+    tag: Order Error
   modified_description: add-add 1 tablespoon of chopped cilantro leaves to the bowl
     without measuring
   start_time: 4.7656347543502
@@ -14,10 +16,12 @@ step_annotations:
 - description: Add-1/2 teaspoon of chaat masala powder to the bowl
   end_time: 115.08947773410199
   errors:
-  - description: added 1 tsp instead of 1/2 tsp
+  - description: Measured 1 tsp instead of 1/2 tsp.
     tag: Measurement Error
   - description: spill while adding
     tag: Technique Error
+  - description: Step performed before whisking curd in the bowl
+    tag: Order Error
   modified_description: Add-1 teaspoon of chaat masala powder to the bowl and spill
     while adding
   start_time: 85.40844383599618
@@ -28,8 +32,10 @@ step_annotations:
   errors:
   - description: add less than 1 cup
     tag: Measurement Error
-  - description: do not whisk just add
+  - description: Did not whisk just added curd
     tag: Preparation Error
+  - description: Step performed after adding ingredients to the bowl
+    tag: Order Error
   modified_description: whisk-In a mixing bowl, add less than 1 cup of chilled curd
     until smooth. Use fresh homemade or packaged curd
   start_time: 130.21000443691062
@@ -40,9 +46,7 @@ step_annotations:
   - description: used grater instead of peeler
     tag: Preparation Error
   - description: peel the cucumber incompletely
-    tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
+    tag: Technique Error
   modified_description: peel-peel the cucumber using a grater incompletely
   start_time: 192.09216001692369
   step_id: 182
@@ -58,7 +62,7 @@ step_annotations:
 - description: Add-Add 1 teaspoon of cumin powder to the bowl
   end_time: 345.81751482881134
   errors:
-  - description: add cumin instead of cumin powder
+  - description: Add raw cumin seeds instead of cumin powder
     tag: Preparation Error
   modified_description: Add-Add 1 teaspoon of cumin to the bowl
   start_time: 297.6558371828283
@@ -66,26 +70,40 @@ step_annotations:
 - description: chop or grate-chop or grate the cucumber
   end_time: 412.4598362226715
   errors:
-  - description: cut with a scissor instead of chopping/ grating
-    tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
+  - description: Cut with scissor instead of chopping
+    tag: Preparation Error
   modified_description: cut cucumber with a scissor instead of chopping/ grating
   start_time: 364.5781683304442
   step_id: 185
 - description: Add-Add the chopped or grated cucumber to the whisked curd
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 190
 - description: Add-1/4 teaspoon salt to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 184
 - description: Rinse-Rinse 1 medium sized cucumber
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 189
 - description: Combine-Combine all the ingredients in the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 186
