--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/17_cucumberraita/17_49.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/17_cucumberraita/17_49.yaml
@@ -7,6 +7,8 @@ step_annotations:
   errors:
   - description: Added tablespoon instead of teaspoon
     tag: Measurement Error
+  - description: Step performed before whisking curd in the bowl
+    tag: Order Error
   modified_description: Add-1/4 tablespoon of red chilli powder to the bowl instead
     of teaspoon
   start_time: 11.219831526061776
@@ -20,6 +22,8 @@ step_annotations:
   errors:
   - description: add turmeric instead of cumin powder
     tag: Preparation Error
+  - description: Step performed before whisking curd in the bowl
+    tag: Order Error
   modified_description: Add-Add 1 teaspoon of turmeric to the bowl
   start_time: 157.07764136486486
   step_id: 188
@@ -28,13 +32,14 @@ step_annotations:
   errors:
   - description: donot peel the cucumber properly
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Peel only half the cucumber
   start_time: 182.8172548658301
   step_id: 182
-- description: Add-1/2 teaspoon of chaat masala powder to the bowl
+- description: Add-1/2 teaspoon of chat masala powder to the bowl
   end_time: 252.11621429150583
+  errors:
+  - description: Step performed before whisking curd in the bowl
+    tag: Order Error
   start_time: 215.15676926447875
   step_id: 191
 - description: Add-1/4 teaspoon salt to the bowl
@@ -42,12 +47,17 @@ step_annotations:
   errors:
   - description: Add 1 teaspoon instead of 1/4 teaspoon
     tag: Measurement Error
+  - description: Step performed before whisking curd in the bowl
+    tag: Order Error
   modified_description: Add- Add 1 teaspoon salt to the bowl
   start_time: 258.71611518918917
   step_id: 184
 - description: whisk-In a mixing bowl, whisk 1 cup of chilled curd until smooth. Use
     fresh homemade or packaged curd
   end_time: 406.55389529729734
+  errors:
+  - description: Step performed after ingredients to the bowl
+    tag: Order Error
   start_time: 302.9354512036679
   step_id: 183
 - description: Combine-Combine all the ingredients in the bowl
@@ -55,7 +65,7 @@ step_annotations:
   errors:
   - description: Spilling while combining in the bowl
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before adding all the ingredients in the bowl
     tag: Order Error
   modified_description: Combine-Spill while combining all the ingredients in the bowl
   start_time: 407.873875476834
@@ -63,7 +73,7 @@ step_annotations:
 - description: add-add 1 tablespoon of chopped cilantro leaves to the bowl
   end_time: 595.3110609710426
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after combining all the ingredients in the bowl
     tag: Order Error
   start_time: 487.07268624903475
   step_id: 187
@@ -72,7 +82,7 @@ step_annotations:
   errors:
   - description: cut cucumber into thin strips instead of chop/ grate
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after combining all the ingredients in the bowl
     tag: Order Error
   modified_description: cut cucumber into thin strips
   start_time: 602.5709519584943
@@ -80,7 +90,7 @@ step_annotations:
 - description: Add-Add the chopped or grated cucumber to the whisked curd
   end_time: 682.4297528204634
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after combining all the ingredients in the bowl
     tag: Order Error
   start_time: 661.3100699478764
   step_id: 190
